...
    bool isNetworkAvailable =
    await InternetConnectionChecker().hasConnection;

      if (mobileNo.isEmpty) {
        // Show error message if any field is empty
        ScaffoldMessenger.of(context).showSnackBar(
          SnackBar(content: Text('Please fill all the fields')),
        );
        return; // Exit early
      }
      _isLoading = true;
      _errorMessage = null;
      notifyListeners();
...
